<resources>
    <string name="app_name">Quick News</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Quick Crispy News</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="bbc_hindi">BBC</string>
    <string name="aajtak">AajTak</string>
    <string name="zee_news">Zee News</string>
    <string name="fox_news">Fox News</string>
    <string name="ndtv_news">NDTV</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>