<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_bbc">

    <fragment
        android:id="@+id/nav_bbc"
        android:name="com.example.quicknews.ui.bbc.BBCFragment"
        android:label="@string/bbc_hindi"
        tools:layout="@layout/fragment_bbc" />

    <fragment
        android:id="@+id/nav_aajtak"
        android:name="com.example.quicknews.ui.aajtak.AajTakFragment"
        android:label="@string/aajtak"
        tools:layout="@layout/fragment_aajtak" />

    <fragment
        android:id="@+id/nav_zeenews"
        android:name="com.example.quicknews.ui.zeenews.ZeeNewsFragment"
        android:label="@string/zee_news"
        tools:layout="@layout/fragment_zeenews" />
    <fragment
        android:id="@+id/nav_foxnews"
        android:name="com.example.quicknews.customFragments.FoxNewsFragment"
        android:label="@string/fox_news"
        tools:layout="@layout/fragment_fox_news" />
    <fragment
        android:id="@+id/nav_ndtv"
        android:name="com.example.quicknews.customFragments.NdtvFragment"
        android:label="@string/ndtv_news"
        tools:layout="@layout/fragment_ndtv" />
</navigation>